test/files/neg/t8463.check
t8463.scala:5: error: type mismatch;
 found   : Long
 required: ?T[Long]
Note that implicit conversions are not applicable because they are ambiguous:
 both method longWrapper in class LowPriorityImplicits of type (x: Long)scala.runtime.RichLong
 and method ArrowAssoc in object Predef of type [A](self: A)ArrowAssoc[A]
 are possible conversion functions from Long to ?T[Long]
  insertCell(Foo(5))
            ^
one error found
